-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0
-
None
-
Android (HTC devices only)
-
-
0fc578829115d593c9a09bd4b2a5e9fea1a759d1
When you input Pinyin word consisting two Chinese characters and choose it from the selection list, then the next character is printed directly to the TextInput in Latin input. And you need to remove the Latin character to continue inputting in Pinyin. It seems that to reproduce the bug you need to input the whole Pinyin word even if the selection list can predict it beforehand.
This is reproducible only in HTC Android devices (tested with T528w(android 4.0.4, API 15) and M8Sw(android 4.4.2, API 19)).
See attached example to reproduce. Steps:
1) input RUGUO, which shows you a vocabulary "如果"
2) choose 如果, and this vocabulary goes into the TextInput
3) type any letter, it will become a capital Latin letter and it is printed directly to the TextInput
- relates to
-
QTBUG-43747 Android: Pinyin input method in HTC Sense Input outputs Latin characters into TextInput
-
- Closed
-
For Gerrit Dashboard: QTBUG-42300 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
100542,2 | Fix for HTC Pinyin input method | 5.4.0 | qt/qtbase | Status: MERGED | +2 | 0 |