Fix for HTC Pinyin input method

HTC does not do beginBatchEdit/endBatchEdit when committing text.
We implement the commit in two steps: first set the text, then move
the cursor. To avoid sending an updateSelection for the intermediate state,
we need to block updates when we set the text in the editor.

Task-number: QTBUG-42300
Change-Id: Icd18700ecf1fba5acb9f8a78762555c1309b221b
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@theqtcompany.com>

cregit: 0fc578829115d593c9a09bd4b2a5e9fea1a759d1 https://github.com/qt/qtbase/commit/0fc578829115d593c9a09bd4b2a5e9fea1a759d1